# ai-orchestration-ex4-finding-bugs

./: .env-example  .gitignore  .pre-commit-config.yaml  ASSIGNMENT.md  CLAUDE.md  README.md  ex04.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/manifests/: fixture-001_manifest.json  fixture-naive-001_manifest.json  phase7-comparison-graph_manifest.json  phase7-comparison-naive_manifest.json
artifacts/pre_fix/: provenance.json
assets/: README.md
assets/diagrams/: architecture.md
assets/screenshots/: README.md
config/: pricing.json  rate_limits.json  setup.json
docs/: EVIDENCE_MATRIX.md  PLAN.md  PRD.md  PRD_artifact_provenance.md  PRD_comparison_experiment.md  PRD_extension_analysis.md  PRD_graph_guided_investigation.md  PRD_self_grade.md  PROMPTS.md  PROMPT_LOG.md  SELF_ASSESSMENT.md  TODO.md
docs/plan-wiki/: 01-Architecture-Overview.md  02-C4-Model.md  03-Module-Design.md  04-Data-Flow.md  05-ADRs.md  06-OOP-Schema.md  07-UML-Activity-Diagram.md  08-API-Contract.md  09-Configuration-Schema.md  10-Project-Structure.md  11-Traceability-Matrix.md  12-Repair-Inventory-Phase-6-8-Architectural-Repairs.md  12-Revision-History.md  (+2 more)
notebooks/: comparison_analysis.ipynb  walkthrough.ipynb
obsidian/: hot.md  index.md  phase7-before-after.md  phase7-investigation.md
reports/: README.md  blocked_operations.md  bug_analysis.md  bug_analysis_live.md  clean_clone_verification.md  diagrams.md  diff_foobar.md  pipeline.md  root_cause.md
scripts/: check_docs_sync.py  generate_charts.py  generate_doc_wikis.py  generate_notebook.py  validate_repo.py
(+290 files in other folders)
